RESOLVED FIXED210757
Fix build when !ENABLE(RESOURCE_LOAD_STATISTICS)
https://bugs.webkit.org/show_bug.cgi?id=210757
Summary Fix build when !ENABLE(RESOURCE_LOAD_STATISTICS)
Stephan Szabo
Reported 2020-04-20 11:56:38 PDT
r260356 appears to use functions of NetworkSession that appear to be declared in a ENABLE(RESOURCE_LOAD_STATISTICS) block with no guard.
Attachments
Patch (1.48 KB, patch)
2020-04-20 12:00 PDT, Stephan Szabo
no flags
Stephan Szabo
Comment 1 2020-04-20 12:00:02 PDT
Ross Kirsling
Comment 2 2020-04-20 12:12:24 PDT
Comment on attachment 396997 [details] Patch r=me, looks like this code was moved from a Cocoa-specific file that was making this assumption without issue.
EWS
Comment 3 2020-04-20 13:09:51 PDT
Committed r260391: <https://trac.webkit.org/changeset/260391> All reviewed patches have been landed. Closing bug and clearing flags on attachment 396997 [details].
Radar WebKit Bug Importer
Comment 4 2020-04-20 13:10:15 PDT
Note You need to log in before you can comment on or make changes to this bug.