Fix build when !ENABLE(RESOURCE_LOAD_STATISTICS) https://bugs.webkit.org/show_bug.cgi?id=210757

Reviewed by Ross Kirsling.

Build fix, no new tests

* NetworkProcess/NetworkDataTask.cpp:
Add ENABLE(RESOURCE_LOAD_STATISTICS) around block
using NetworkSession functions only declared when
that is enabled.


Canonical link: https://commits.webkit.org/223648@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@260391 268f45cc-cd09-0410-ab3c-d52691b4dbfc