Source/WebKit/NetworkProcess/NetworkDataTask.cpp
@@ -178,8 +178,10 @@ bool NetworkDataTask::isThirdPartyRequest(const WebCore::ResourceRequest& reques
 
 void NetworkDataTask::restrictRequestReferrerToOriginIfNeeded(WebCore::ResourceRequest& request)
 {
+#if ENABLE(RESOURCE_LOAD_STATISTICS)
     if ((m_session->sessionID().isEphemeral() || m_session->isResourceLoadStatisticsEnabled()) && m_session->shouldDowngradeReferrer() && isThirdPartyRequest(request))
         request.setExistingHTTPReferrerToOriginString();
+#endif
 }
 
 } // namespace WebKit
